update dependencies fix navbar order on safari 15 fix select click bug fix input focus bug on long clicks wordpress 6.0 compatibility

--- a/assets/styles/admin/layouts/sidebar.scss
+++ b/assets/styles/admin/layouts/sidebar.scss
@@ -88,6 +88,7 @@
             border-radius: 50%;
             margin-bottom: 4px;
             margin-right: 8px;
+            padding: 0;
           }
           &:only-child {
             width: 100%;
